Speed up updates of existing CSS properties from JS. https://bugs.webkit.org/show_bug.cgi?id=82235

Reviewed by Andreas Kling.

Source/WebCore:

Improve the way we handle updating an existing CSS property by replacing its value
by the new one rather than removing the old value and then adding the new one. This
speed up by 35% PerformanceTests/CSS/CSSPropertyUpdateValue.html.

No new tests : Updating existing tests that were relying on the order of the properties
after modification. Each updated property is not appended to the list of properties of the
style therefore the cssText value is slightly different. It matches Firefox behavior but not
Opera.

* css/StylePropertySet.cpp:
(WebCore::StylePropertySet::addParsedProperty):

LayoutTests:

Updated expectations after behavior change on how we handle updates of
CSS properties from JS. We match now Firefox where the cssText keeps the
order of the properties (but modify its value) whereas before we were appending
the new value at the end of the list of properties.

* editing/pasteboard/data-transfer-items-expected.txt:
* editing/pasteboard/onpaste-text-html-expected.txt:
* fast/dom/css-set-property-exception-expected.txt:
* fast/events/ondrop-text-html-expected.txt:
* fast/mutation/observe-attributes-expected.txt:
* fast/mutation/observe-attributes.html:
* inspector/styles/styles-new-API-expected.txt:


git-svn-id: svn://svn.chromium.org/blink/trunk@112387 bbb929c8-8fbe-4397-9dbb-9b2b20218538